--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,11 @@
   filter: blur(190px);
 }
 
+/* orange gradient  */
+/* .gradient-people01 {
+  background: rgba(red, green, blue, alpha);
+} */
+
 .glassmorphism {
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
