added animation to the user pins

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -137,3 +137,18 @@
   background: #65c4fa;
   filter: blur(150px);
 }
+
+.bounce-animation {
+  animation: bounce 2s 1s infinite;
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+      transform: translateY(0);
+    }
+  
+  50% {
+      transform: translateY(4px);
+    }
+}
